--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    api("org.telegram:telegrambots:5.4.0.1")
-    api("com.google.code.gson:gson:2.9.0")
-    api("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
-    api("joda-time:joda-time:2.10.13")
+    implementation("org.telegram:telegrambots:5.4.0.1")
+    implementation("com.google.code.gson:gson:2.9.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
+    implementation("joda-time:joda-time:2.10.13")
     implementation("com.google.firebase:firebase-admin:8.1.0")
     implementation(platform("com.amazonaws:aws-java-sdk-bom:1.11.1000"))
     implementation("com.amazonaws:aws-java-sdk-s3")
